# infer-rs

./: Cargo.toml  README.md  build.rs
src/: api.rs  lib.rs  sys.rs
src/coreml/: bindings.mm  mod.rs
src/coreml/testdata/: upsample.mlmodel
src/onnx/: api.rs  bindings.h  mod.rs
